@@ -27,5 +27,8 @@ Depends:
  python-iniparse,
  python-bottle,
  contrail-config-openstack,
- keepalived (=1:1.2.13-1~bpo70+1) | keepalived (=1.2.13-0~276~ubuntu14.04.1)
+ keepalived (=1:1.2.13-1~bpo70+1) | keepalived (=1.2.13-0~276~ubuntu14.04.1),
+ zookeeper
+Replaces: contrail-database-common (<< 4.0.0)
+Breaks: contrail-database-common (<< 4.0.0)
 Description: Contrail Openstack Config composite debian package
